create username validation function and display feedback when a username is invalid

--- a/cPanel Javascript Test.html
+++ b/cPanel Javascript Test.html
@@ -56,6 +56,7 @@ li input {
 	<li><label for="usernumber">User Number</label><input type="text" id="usernumber" name="usernumber" value="" /></li><!--must be 36 digits and have no non-numeral characters-->
 	<li><label for="geoglocation">Geographic Location</label><input type="text" id="geoglocation" name="geoglocation" value="" /></li><!--currently no input validation is used as the input validation would be different for US and non-US locations-->
 </ul>
+<div id="feedback"></div>
 <input type="submit" alt="register" name="register" value="Register" id="submit_btn" />
 </form>
 </div>
