filter array from part 3

--- a/cPanel Javascript Test.html
+++ b/cPanel Javascript Test.html
@@ -73,6 +73,8 @@ for (var i = 1; i<= len; i++){
 }
 </script>
 <br /><br />
+<div id="filteredArray"></div>
+<br /><br />
 <h2>Part 4: Flickr Photos</h2>
 <p>Click on the button to see where it's _______.</p>
 <input type="button" id="flickrpics" value="Show Pictures" />
