--- a/cPanel Javascript Test.html
+++ b/cPanel Javascript Test.html
@@ -78,6 +78,7 @@ for (var i = 1; i<= len; i++){
 <h2>Part 4: Flickr Photos</h2>
 <p>Click on the button to see where it's _______.</p>
 <input type="button" id="flickrpics" value="Show Pictures" />
+<div id="flickr"></div>
 <script src="js/main.js"></script>
 </body>
 </html>
