update styles for part3 and part4

--- a/cPanel Javascript Test.html
+++ b/cPanel Javascript Test.html
@@ -35,34 +35,37 @@
       <input type="submit" alt="register" name="register" value="Register" id="submit_btn" />
     </form>
   </div> <!-- NOTE: end of #registrationform -->
-  <div id="part2">
-    <h2>Part 2: cPanel.net</h2>
-    <p>cPanel is a leading Web Hosting Control Panel Software provider supplying hosting automation tools to numerous data centers and customers all around the world. cPanel offers web hosting software that automates the intricate workings of web hosting servers. cPanel products are used on tens of thousands of servers worldwide to equip server administrators with the tools they need to provide top notch hosting to their customers. Since our beginnings in 1997, cPanel has been setting the standard for web hosting automation.</p>
-    <input type="button" id="findoutmore" value="Find Out More" />
-  </div> <!-- NOTE: end of #part2 -->
-  <br />
-  <br />
-  <div id="part3">
-    <script type="text/javascript">
-    var thisArray = [ 'T','h','a','i','s','b',' ','i','c','s',' ','a','t','h','e','e',' ','t','s','o','r','n','g','t',' ','t','n','h','a','s','t',' ','o','n','e','o','v','e','a','r',' ','f','e','n','a','d','s','p',',',' ','p','y','e','i','s',' ','p','i','t','o',' ','g',' ','o','e','i','s',' ','t','o','n','e',' ','a',' ','n','d',' ',' ','o','i','n',' ','a','m','y',' ',' ','f','a','r','i',' ','e','n','o','d','s','i',' ','S',' ','o','m','a','e',' ','a','p','e',' ','o','p','a','l','e','r',' ','s',' ','t','a','a','r','t',' ','e','d','u',' ','s',' ','i','n','g','g','i',' ','n','g','o',' ','i','t','t',',',' ',' ','n','i','o','t','h',' ','k','a','n','o',' ','w','i',' ','n','g','o',' ','w','r','h','a','i','t',' ','s','i','t','h',' ','w','r','a','s','h',' ','A',' ','n','d','a',' ','t','o','h','e',' ','y',' ','a','w','i','p','l','l','o',' ','c','r','o','n',' ','t','i','p','n','u','i','e',' ','t','s','i',' ','n','g',' ','i','n',' ','g',' ','s','i','t','h',' ','f','r','o','r',' ','e','v','t','e','r','t',' ','j','u','u','s','t','t',' ','a','b','e','l','c','a',' ','u','s','l','e'];
-    var len = thisArray.length;
-    document.write("<br /><h2>Part 3: The Array:</h2>");
-    for (var i = 1; i<= len; i++){
-    	document.write(thisArray[i]);
-    }
-    </script>
+  <div id="mainPage">
+    <div class="wrapper">
+      <div id="part2">
+        <h2>Part 2: cPanel.net</h2>
+        <p>cPanel is a leading Web Hosting Control Panel Software provider supplying hosting automation tools to numerous data centers and customers all around the world. cPanel offers web hosting software that automates the intricate workings of web hosting servers. cPanel products are used on tens of thousands of servers worldwide to equip server administrators with the tools they need to provide top notch hosting to their customers. Since our beginnings in 1997, cPanel has been setting the standard for web hosting automation.</p>
+        <input type="button" id="findoutmore" value="Find Out More" />
+      </div> <!-- NOTE: end of #part2 -->
+      <div id="part3">
+        <script type="text/javascript">
+        var thisArray = [ 'T','h','a','i','s','b',' ','i','c','s',' ','a','t','h','e','e',' ','t','s','o','r','n','g','t',' ','t','n','h','a','s','t',' ','o','n','e','o','v','e','a','r',' ','f','e','n','a','d','s','p',',',' ','p','y','e','i','s',' ','p','i','t','o',' ','g',' ','o','e','i','s',' ','t','o','n','e',' ','a',' ','n','d',' ',' ','o','i','n',' ','a','m','y',' ',' ','f','a','r','i',' ','e','n','o','d','s','i',' ','S',' ','o','m','a','e',' ','a','p','e',' ','o','p','a','l','e','r',' ','s',' ','t','a','a','r','t',' ','e','d','u',' ','s',' ','i','n','g','g','i',' ','n','g','o',' ','i','t','t',',',' ',' ','n','i','o','t','h',' ','k','a','n','o',' ','w','i',' ','n','g','o',' ','w','r','h','a','i','t',' ','s','i','t','h',' ','w','r','a','s','h',' ','A',' ','n','d','a',' ','t','o','h','e',' ','y',' ','a','w','i','p','l','l','o',' ','c','r','o','n',' ','t','i','p','n','u','i','e',' ','t','s','i',' ','n','g',' ','i','n',' ','g',' ','s','i','t','h',' ','f','r','o','r',' ','e','v','t','e','r','t',' ','j','u','u','s','t','t',' ','a','b','e','l','c','a',' ','u','s','l','e'];
+        var len = thisArray.length;
+        document.write("<h2>Part 3: The Array:</h2>");
+        for (var i = 1; i<= len; i++){
+        	document.write(thisArray[i]);
+        }
+        </script>
+        <br />
+        <br />
+        <div id="filteredArray"></div>
+      </div> <!-- NOTE: end of #part3 -->
+    </div>
     <br />
     <br />
-    <div id="filteredArray"></div>
-  </div> <!-- NOTE: end of #part3 -->
-  <br />
-  <br />
-  <div id="part4">
-    <h2>Part 4: Flickr Photos</h2>
-    <p>Click on the button to see where it's _______.</p>
-    <input type="button" id="flickrpics" value="Show Pictures" />
-    <div id="flickr"></div>
-  </div><!-- NOTE: end of #part4 -->
+    <div id="part4">
+      <h2>Part 4: Flickr Photos</h2>
+      <p>Click on the button to see where it's _______.</p>
+      <input type="button" id="flickrpics" value="Show Pictures" />
+      <div id="flickr"></div>
+    </div> <!-- NOTE: end of #part4 -->
+  </div> <!-- NOTE: end of .wrapper -->
+
 
   <div id="popupContainer"></div>
 
