clean up comments

--- a/cPanel Javascript Test.html
+++ b/cPanel Javascript Test.html
@@ -55,7 +55,7 @@
         <br />
         <div id="filteredArray"></div>
       </div> <!-- NOTE: end of #part3 -->
-    </div>
+    </div> <!-- NOTE: end of .wrapper -->
     <br />
     <br />
     <div id="part4">
@@ -64,7 +64,7 @@
       <input type="button" id="flickrpics" value="Show Pictures" />
       <div id="flickr"></div>
     </div> <!-- NOTE: end of #part4 -->
-  </div> <!-- NOTE: end of .wrapper -->
+  </div> <!-- NOTE: end of #mainPage -->
 
 
   <div id="popupContainer"></div>
